@@ -19,11 +19,10 @@
 
 package org.apache.datasketches.memory;
 
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySegment.Scope;
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
-
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
 
 /**
  * The base class for Memory and Buffer plus some common static variables and check methods.
@@ -47,7 +46,7 @@ public interface Resource extends AutoCloseable {
    * <p>The user can customize the actions of the MemoryRequestServer by
    * implementing the MemoryRequestServer interface and set it using the
    * {@link #setMemoryRequestServer(MemoryRequestServer)} method or optionally with the
-   * {@link WritableMemory#allocateDirect(long, long, ByteOrder, MemoryRequestServer)} method.</p>
+   * {@link WritableMemory#allocateDirect(arena, long, long, ByteOrder, MemoryRequestServer)} method.</p>
    *
    * <p>If the MemoryRequestServer is not set by the user and additional memory is needed by the sketch,
    * null will be returned and the sketch will abort.
@@ -91,24 +90,27 @@ public interface Resource extends AutoCloseable {
   ByteBuffer asByteBufferView(ByteOrder order);
 
   /**
-   * <i>From Java 17 ResourceScope::close():</i>
+   * <i>From Java 21 java.lang.foreign.Arena::close():</i>
+   * Closes this arena. If this method completes normally, the arena scope is no longer {@linkplain Scope#isAlive() alive},
+   * and all the memory segments associated with it can no longer be accessed. Furthermore, any off-heap region of memory backing the
+   * segments obtained from this arena are also released.
    *
-   * <p>Closes this resource scope. As a side-effect, if this operation completes without exceptions, this scope will be marked
-   * as <em>not alive</em>, and subsequent operations on resources associated with this scope will fail with {@link IllegalStateException}.
-   * Additionally, upon successful closure, all direct (native) resources associated with this resource scope will be released.</p>
+   * This operation is not idempotent; that is, closing an already closed arena <em>always</em> results in an
+   * exception being thrown. This reflects a deliberate design choice: failure to close an arena might reveal a bug
+   * in the underlying application logic.
    *
-   * <p>API Note This operation is not idempotent; that is, closing an already closed resource scope <em>always</em> results in an
-   * exception being thrown. This reflects a deliberate design choice: resource scope state transitions should be
-   * manifest in the client code; a failure in any of these transitions reveals a bug in the underlying application
-   * logic. </p>
+   * If this method completes normally, then {@code java.lang.foreign.Arena.scope().isAlive() == false}.
+   * Implementations are allowed to throw {@link UnsupportedOperationException} if an explicit close operation is
+   * not supported.
    *
-   * @throws IllegalStateException if one of the following condition is met:
-   * <ul>
-   *     <li>this resource scope is not <em>alive</em>
-   *     <li>this resource scope is confined, and this method is called from a thread other than the thread owning this resource scope</li>
-   *     <li>this resource scope is shared and a resource associated with this scope is accessed while this method is called</li>
-   * </ul>
-   * @throws UnsupportedOperationException if this resource scope is <em>implicit</em>}.
+   * @see java.lang.foreign.MemorySegment.Scope#isAlive()
+   *
+   * @throws IllegalStateException if the arena has already been closed.
+   * @throws IllegalStateException if a segment associated with this arena is being accessed concurrently, e.g.
+   * by a {@linkplain java.lang.foreign.Linker#downcallHandle(FunctionDescriptor, Linker.Option...) downcall method handle}.
+   * @throws WrongThreadException if this arena is confined, and this method is called from a thread
+   * other than the arena's owner thread.
+   * @throws UnsupportedOperationException if this arena cannot be closed explicitly.
    */
   @Override
   void close();
@@ -158,12 +160,6 @@ public interface Resource extends AutoCloseable {
    * @return the capacity of this object in bytes
    */
   long getCapacity();
-
-  /**
-   * Return the owner thread of the underlying ResourceScope, or null.
-   * @return the owner thread of the underlying ResourceScope, or null.
-   */
-  Thread getOwnerThread();
 
   /**
    * Gets the relative base offset of <i>this</i> with respect to <i>that</i>, defined as: <i>this</i> - <i>that</i>.
@@ -297,7 +293,7 @@ public interface Resource extends AutoCloseable {
    * Returns the resource scope associated with this memory segment.
    * @return the resource scope associated with this memory segment.
    */
-  ResourceScope scope();
+  Scope scope();
 
   /**
    * Returns a new ByteBuffer with a copy of the data from this Memory object.
