@@ -24,6 +24,7 @@ import static org.testng.Assert.assertFalse;
 import static org.testng.Assert.assertNotNull;
 import static org.testng.Assert.assertTrue;
 
+import java.lang.foreign.Arena;
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
 
@@ -33,8 +34,6 @@ import org.apache.datasketches.memory.Memory;
 import org.apache.datasketches.memory.WritableBuffer;
 import org.apache.datasketches.memory.WritableMemory;
 import org.testng.annotations.Test;
-
-import jdk.incubator.foreign.ResourceScope;
 
 public class Buffer2Test {
 
@@ -83,19 +82,19 @@ public class Buffer2Test {
       byteArray[i] = i;
     }
 
-    Buffer buffer = Memory.wrap(byteArray).asBuffer();
-    int i = 0;
-    while (buffer.hasRemaining()) {
-      assertEquals(byteArray[i++], buffer.getByte());
+      Buffer buffer = Memory.wrap(byteArray).asBuffer();
+      int i = 0;
+      while (buffer.hasRemaining()) {
+        assertEquals(byteArray[i++], buffer.getByte());
+      }
+
+      buffer.setPosition(0);
+      byte[] copyByteArray = new byte[64];
+      buffer.getByteArray(copyByteArray, 0, 64);
+      assertEquals(byteArray, copyByteArray);
+
+      assertEquals(false, buffer.hasByteBuffer());
     }
-
-    buffer.setPosition(0);
-    byte[] copyByteArray = new byte[64];
-    buffer.getByteArray(copyByteArray, 0, 64);
-    assertEquals(byteArray, copyByteArray);
-
-    assertEquals(false, buffer.hasByteBuffer());
-  }
 
   @Test
   public void testWrapCharArray() {
@@ -106,16 +105,16 @@ public class Buffer2Test {
     }
 
     Buffer buffer = Memory.wrap(charArray).asBuffer();
-    int i = 0;
-    while (buffer.hasRemaining()) {
-      assertEquals(charArray[i++], buffer.getChar());
-    }
+      int i = 0;
+      while (buffer.hasRemaining()) {
+        assertEquals(charArray[i++], buffer.getChar());
+      }
 
-    buffer.setPosition(0);
-    char[] copyCharArray = new char[64];
-    buffer.getCharArray(copyCharArray, 0, 64);
-    assertEquals(charArray, copyCharArray);
-  }
+      buffer.setPosition(0);
+      char[] copyCharArray = new char[64];
+      buffer.getCharArray(copyCharArray, 0, 64);
+      assertEquals(charArray, copyCharArray);
+    }
 
   @Test
   public void testWrapShortArray() {
@@ -126,16 +125,16 @@ public class Buffer2Test {
     }
 
     Buffer buffer = Memory.wrap(shortArray).asBuffer();
-    int i = 0;
-    while (buffer.hasRemaining()) {
-      assertEquals(shortArray[i++], buffer.getShort());
-    }
+      int i = 0;
+      while (buffer.hasRemaining()) {
+        assertEquals(shortArray[i++], buffer.getShort());
+      }
 
-    buffer.setPosition(0);
-    short[] copyShortArray = new short[64];
-    buffer.getShortArray(copyShortArray, 0, 64);
-    assertEquals(shortArray, copyShortArray);
-  }
+      buffer.setPosition(0);
+      short[] copyShortArray = new short[64];
+      buffer.getShortArray(copyShortArray, 0, 64);
+      assertEquals(shortArray, copyShortArray);
+    }
 
   @Test
   public void testWrapIntArray() {
@@ -146,16 +145,16 @@ public class Buffer2Test {
     }
 
     Buffer buffer = Memory.wrap(intArray).asBuffer();
-    int i = 0;
-    while (buffer.hasRemaining()) {
-      assertEquals(intArray[i++], buffer.getInt());
-    }
+      int i = 0;
+      while (buffer.hasRemaining()) {
+        assertEquals(intArray[i++], buffer.getInt());
+      }
 
-    buffer.setPosition(0);
-    int[] copyIntArray = new int[64];
-    buffer.getIntArray(copyIntArray, 0, 64);
-    assertEquals(intArray, copyIntArray);
-  }
+      buffer.setPosition(0);
+      int[] copyIntArray = new int[64];
+      buffer.getIntArray(copyIntArray, 0, 64);
+      assertEquals(intArray, copyIntArray);
+    }
 
   @Test
   public void testWrapLongArray() {
@@ -166,16 +165,16 @@ public class Buffer2Test {
     }
 
     Buffer buffer = Memory.wrap(longArray).asBuffer();
-    int i = 0;
-    while (buffer.hasRemaining()) {
-      assertEquals(longArray[i++], buffer.getLong());
-    }
+      int i = 0;
+      while (buffer.hasRemaining()) {
+        assertEquals(longArray[i++], buffer.getLong());
+      }
 
-    buffer.setPosition(0);
-    long[] copyLongArray = new long[64];
-    buffer.getLongArray(copyLongArray, 0, 64);
-    assertEquals(longArray, copyLongArray);
-  }
+      buffer.setPosition(0);
+      long[] copyLongArray = new long[64];
+      buffer.getLongArray(copyLongArray, 0, 64);
+      assertEquals(longArray, copyLongArray);
+    }
 
   @Test
   public void testWrapFloatArray() {
@@ -186,16 +185,16 @@ public class Buffer2Test {
     }
 
     Buffer buffer = Memory.wrap(floatArray).asBuffer();
-    int i = 0;
-    while (buffer.hasRemaining()) {
-      assertEquals(floatArray[i++], buffer.getFloat());
-    }
+      int i = 0;
+      while (buffer.hasRemaining()) {
+        assertEquals(floatArray[i++], buffer.getFloat());
+      }
 
-    buffer.setPosition(0);
-    float[] copyFloatArray = new float[64];
-    buffer.getFloatArray(copyFloatArray, 0, 64);
-    assertEquals(floatArray, copyFloatArray);
-  }
+      buffer.setPosition(0);
+      float[] copyFloatArray = new float[64];
+      buffer.getFloatArray(copyFloatArray, 0, 64);
+      assertEquals(floatArray, copyFloatArray);
+    }
 
   @Test
   public void testWrapDoubleArray() {
@@ -206,16 +205,16 @@ public class Buffer2Test {
     }
 
     Buffer buffer = Memory.wrap(doubleArray).asBuffer();
-    int i = 0;
-    while (buffer.hasRemaining()) {
-      assertEquals(doubleArray[i++], buffer.getDouble());
-    }
+      int i = 0;
+      while (buffer.hasRemaining()) {
+        assertEquals(doubleArray[i++], buffer.getDouble());
+      }
 
-    buffer.setPosition(0);
-    double[] copyDoubleArray = new double[64];
-    buffer.getDoubleArray(copyDoubleArray, 0, 64);
-    assertEquals(doubleArray, copyDoubleArray);
-  }
+      buffer.setPosition(0);
+      double[] copyDoubleArray = new double[64];
+      buffer.getDoubleArray(copyDoubleArray, 0, 64);
+      assertEquals(doubleArray, copyDoubleArray);
+    }
 
   @Test
   public void testByteBufferPositionPreservation() {
@@ -400,23 +399,24 @@ public class Buffer2Test {
   @Test
   public void checkIndependence() {
     int cap = 64;
-    ResourceScope scope = ResourceScope.newImplicitScope();
-    WritableMemory wmem = WritableMemory.allocateDirect(cap, 8, scope, ByteOrder.nativeOrder(), null);
-    WritableBuffer wbuf1 = wmem.asWritableBuffer();
-    WritableBuffer wbuf2 = wmem.asWritableBuffer();
-    assertFalse(wbuf1 == wbuf2);
-    assertTrue(wbuf1.nativeOverlap(wbuf2) == cap);
+    try (Arena arena = Arena.ofConfined()) {
+      WritableMemory wmem = WritableMemory.allocateDirect(arena, cap, 8, ByteOrder.nativeOrder(), null);
+      WritableBuffer wbuf1 = wmem.asWritableBuffer();
+      WritableBuffer wbuf2 = wmem.asWritableBuffer();
+      assertFalse(wbuf1 == wbuf2);
+      assertTrue(wbuf1.nativeOverlap(wbuf2) == cap);
 
-    WritableMemory reg1 = wmem.writableRegion(0, cap);
-    WritableMemory reg2 = wmem.writableRegion(0, cap);
-    assertFalse(reg1 == reg2);
-    assertTrue(reg1.nativeOverlap(reg2) == cap);
+      WritableMemory reg1 = wmem.writableRegion(0, cap);
+      WritableMemory reg2 = wmem.writableRegion(0, cap);
+      assertFalse(reg1 == reg2);
+      assertTrue(reg1.nativeOverlap(reg2) == cap);
 
 
-    WritableBuffer wbuf3 = wbuf1.writableRegion();
-    WritableBuffer wbuf4 = wbuf1.writableRegion();
-    assertFalse(wbuf3 == wbuf4);
-    assertTrue(wbuf3.nativeOverlap(wbuf4) == cap);
+      WritableBuffer wbuf3 = wbuf1.writableRegion();
+      WritableBuffer wbuf4 = wbuf1.writableRegion();
+      assertFalse(wbuf3 == wbuf4);
+      assertTrue(wbuf3.nativeOverlap(wbuf4) == cap);
+    }
   }
 
   @Test
